--- a/dfs-datanode/pom.xml
+++ b/dfs-datanode/pom.xml
@@ -25,6 +25,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.machi.dfs</groupId>
+      <artifactId>dfs-rpc</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
