--- a/dfs-namenode/pom.xml
+++ b/dfs-namenode/pom.xml
@@ -34,6 +34,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.machi.dfs</groupId>
+      <artifactId>dfs-rpc</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
